--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   postgres_db:
     container_name: dev_pg_db
-    image: postgres:13-alpine
+    image: postgres:16-alpine
     ports:
       - "5432:5432"
     environment:
@@ -14,19 +14,19 @@ services:
       - dev_postgres_data:/var/lib/postgresql/data/
     restart: always
 
-  pgadmin:
-    container_name: pgadmin4_container
-    image: dpage/pgadmin4
-    restart: always
-    ports:
-      - "5050:80"
-    environment:
-      - PGADMIN_DEFAULT_EMAIL=admin@admin.com
-      - PGADMIN_DEFAULT_PASSWORD=root
-    logging:
-      driver: none
-    volumes:
-      - pgadmin_data:/var/lib/pgadmin
+  # pgadmin:
+  #   container_name: pgadmin4_container
+  #   image: dpage/pgadmin4
+  #   restart: always
+  #   ports:
+  #     - "5050:80"
+  #   environment:
+  #     - PGADMIN_DEFAULT_EMAIL=admin@admin.com
+  #     - PGADMIN_DEFAULT_PASSWORD=root
+  #   logging:
+  #     driver: none
+  #   volumes:
+  #     - pgadmin_data:/var/lib/pgadmin
 
   server:
     container_name: dev_go_server
@@ -45,4 +45,4 @@ services:
 
 volumes:
   dev_postgres_data:
-  pgadmin_data:
+  # pgadmin_data:
