--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 # Server Config
+SERVER_TIMEZONE="Asia/saigon"
 
 SECRET=h9wt*pasj6796j##w(w8=xaje8tpi6h*r&hzgrz065u&ed+k2)
-DEBUG=False
+DEBUG=true
 ALLOWED_HOSTS=0.0.0.0
 SERVER_HOST=0.0.0.0
 SERVER_PORT=8000
@@ -12,7 +13,7 @@ MASTER_DB_USER=taynguyen
 MASTER_DB_PASSWORD=ExamplePwd
 MASTER_DB_HOST=postgres_db
 MASTER_DB_PORT=5432
-MASTER_DB_LOG_MODE=True
+MASTER_DB_LOG_MODE=true
 MASTER_SSL_MODE=disable
 
 REPLICA_DB_NAME=bank-sample
